--- a/Reta-x/AndroidManifest.xml
+++ b/Reta-x/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.NFC" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" />
@@ -29,15 +29,11 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Transparent"
         android:windowSoftInputMode="adjustPan" >
-        
         <activity
             android:name="zigtraka.nfc.reta_x.GetProductInfo"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" 
-            >
-            
+            android:screenOrientation="portrait" >
         </activity>
-        
         <activity
             android:name="zigtraka.nfc.reta_x.ProductInformation"
             android:label="@string/title_activity_second"
@@ -94,8 +90,8 @@
         <activity
             android:name="zigtraka.nfc.reta_x.SearchProduct"
             android:label="Search Product"
-            android:screenOrientation="portrait" 
-            android:windowSoftInputMode="adjustPan">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name="zigtraka.nfc.reta_x.NFCSettings"
@@ -157,9 +153,25 @@
             android:label="Test DB"
             android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="CustomerData" android:screenOrientation="portrait" android:label="CustomerData"></activity>
-        <activity android:label="CustomerSurveyForm" android:name="CustomerSurveyForm" android:screenOrientation="portrait"></activity>
-        <activity android:label="CustomerAnalysis" android:name="CustomerAnalysis" android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="zigtraka.nfc.reta_x.CustomerData"
+            android:label="CustomerData"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="zigtraka.nfc.reta_x.CustomerSurveyForm"
+            android:label="CustomerSurveyForm"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="zigtraka.nfc.reta_x.CustomerAnalysis"
+            android:label="CustomerAnalysis"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="zigtraka.nfc.reta_x.AppExpired"
+            android:label="App Expired" >
+        </activity>
     </application>
 
 </manifest>
