--- a/Reta-x/.classpath
+++ b/Reta-x/.classpath
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="C:/Downloads/additionnal.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Downloads/mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Downloads/activation.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Downloads/achartengine-1.1.0.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
