--- a/Reta-x/AndroidManifest.xml
+++ b/Reta-x/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
         <activity
             android:name="zigtraka.nfc.reta_x.ProductInformation"
-            android:label="@string/title_activity_second"
+            android:label="Product Information"
             android:noHistory="true"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -107,7 +107,7 @@
         <activity
             android:name="zigtraka.nfc.reta_x.Dashboard"
             android:label="Dashboard"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" android:theme="@style/CustomTheme">
         </activity>
         <activity
             android:name="zigtraka.nfc.reta_x.KpiForAssets"
@@ -157,7 +157,7 @@
         <activity
             android:name="zigtraka.nfc.reta_x.CustomerData"
             android:label="CustomerData"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" android:theme="@style/CustomTheme">
         </activity>
         <activity
             android:name="zigtraka.nfc.reta_x.CustomerSurveyForm"
